--- a/src/components/tags/tags.css
+++ b/src/components/tags/tags.css
@@ -3,9 +3,10 @@ h4 {
 }
 
 .tech-tag {
-    background: #444160;
-    border-radius: 0%;
-    border-color: #444160;
+    background: #0c101c;
+    
+    border-radius: 3px;
+    border-color: #0c101c;
     font-family: "Raleway";
     font-size: .85rem;
 }
